--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -318,10 +318,10 @@ fieldset {
   transition: 0.6s;
 }
 .button:hover {
-  background-color: rgba(255, 255, 255, 0.942);
+  background-color: rgba(255, 255, 255, 0.912);
 }
 .button:active {
-  background-color: rgba(255, 255, 255, 0.845);
+  background-color: rgba(255, 255, 255, 0.682);
 }
 
 .container {
@@ -496,6 +496,32 @@ fieldset {
     font-size: 14px;
     margin: 0 0 0 50px;
     letter-spacing: 2px;
+    -webkit-transition: .6s;
+    transition: .6s;
+  }
+  .header__links:hover {
+    color: rgba(255, 255, 255, 0.832);
+  }
+  .header__links:active {
+    color: rgba(255, 255, 255, 0.682);
+  }
+}
+@media (min-width: 1400px) {
+  .header__logo_size {
+    width: 280px;
+    height: 65px;
+  }
+  .header__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .header__links {
+    font-size: 16px;
+    margin: 0 0 0 60px;
+    letter-spacing: 2px;
+    -webkit-transition: .6s;
+    transition: .6s;
   }
   .header__links:hover {
     color: rgba(255, 255, 255, 0.832);
@@ -647,8 +673,13 @@ fieldset {
   }
   .head__image {
     margin-top: -5px;
-    width: 716px;
-    height: 506px;
+    width: 700px;
+    height: 480px;
+  }
+}
+@media (min-width: 1600px) {
+  .head {
+    padding: 100px 0;
   }
 }
 .registration {
@@ -877,16 +908,28 @@ fieldset {
   }
 }
 @media (min-width: 1400px) {
+  .registration {
+    padding: 50px 0;
+  }
+  .registration__title {
+    margin-bottom: 56px;
+  }
+
   .form__fieldset {
-    margin: 0 60px 25px 60px;
+    margin: 0 60px 36px 60px;
   }
   .form__item {
     width: 320px;
   }
 }
+@media (min-width: 1600px) {
+  .registration {
+    padding: 100px 0;
+  }
+}
 .error {
   text-align: center;
-  padding-top: 120px;
+  padding-top: 160px;
 }
 .error__title {
   font-size: 64px;
@@ -896,10 +939,6 @@ fieldset {
 }
 
 @media (min-width: 576px) {
-  .error {
-    text-align: center;
-    padding: 120px 0;
-  }
   .error__title {
     font-size: 92px;
   }
@@ -924,7 +963,17 @@ fieldset {
   }
   .error__subtitle {
     font-size: 60px;
-    margin-bottom: 50px;
+  }
+}
+@media (min-width: 1200px) {
+  .error {
+    padding-top: 200px;
+  }
+  .error__title {
+    font-size: 180px;
+  }
+  .error__subtitle {
+    font-size: 80px;
   }
 }
 
