--- a/assets/styles/scss/content/_head.scss
+++ b/assets/styles/scss/content/_head.scss
@@ -1,51 +1,47 @@
 .head{
     padding: 50px 0;
-   
-    
-    &__block-title{
-        text-align: center;
-        margin-bottom: 26px;
+    &__wrapper{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
-    &__title{
-        font-family: "Arial Black", Helvetica, sans-serif;;
-        margin-bottom: 6px;
-        font-size: 30px;
-        // font-size: calc(3vw + 1.1em);
+    &__image{
+        margin-bottom: 40px;
+        width: 100%;
+        height: auto;
     }
-    &__title_position_left{
-        margin-right: 60px;
-    }
-    &__title_position_right{
-        margin-left: 60px;
-    }
+  
     &__link{
         display: block;
         width: 210px;
         margin: 0 auto;
         padding: 15px 0;
         border-radius: 20px;
+
+        // background: none;
+        // border: 1px solid $wt;
+        // color: rgba(255, 255, 255, 0.945);
+        // transition: 1s;
+
+        // &:hover{
+        //     color: $bc;
+        //     box-shadow: 0px 0px 50px 30px rgba(255, 255, 255, 0.2);
+        //     // box-shadow: 0 0 5px rgba(255, 255, 255, 0.2),
+        //     //             0 0 25px rgba(255, 255, 255, 0.2),
+        //     //             0 0 50px rgba(255, 255, 255, 0.2),
+        //     //             0 0 200px rgba(255, 255, 255, 0.2);
+        // }
+
        
     }
 
-    &__image{
-        margin-top: 50px;
-        width: 100%;
-        height: auto;
-    }
+  
 }
 
 @media (min-width: 576px) {
     .head{
-        padding: 60px 0;
-        &__title{
-            font-size: 45px;
-        }
-        &__title_position_left{
-            margin-right: 120px;
-        }
-        &__title_position_right{
-            margin-left: 120px;
-        }
+        // padding: 60px 0;
+
         &__link{
             width: 316px;
             padding: 18px 0;
@@ -60,18 +56,9 @@
 
 @media (min-width: 768px) {
     .head{
-
-        &__block-title{
-            
-            margin-bottom: 42px;
-        }
-        &__title{
-            font-size: 58px;
-            margin-bottom: 12px;
-        }
         
         &__image{
-            margin-top: 70px;
+            margin-bottom: 60px;
             
         }
          
@@ -81,102 +68,40 @@
 @media (min-width: 992px) {
     .head{
 
-        &__block-title{
-            margin-bottom: 65px;
-        }
-        &__title{
-            font-size: 70px;
-            margin-bottom: 12px;
-        }
-        &__title_position_left{
-            margin-right: 180px;
-        }
-        &__title_position_right{
-            margin-left: 180px;
-        }
 
         &__link{
             width: 380px;
             padding: 21px 0;
         }
         
-        &__image{
-            margin-top: 70px;
-            
-        }
          
     } 
 }
 
 @media (min-width: 1200px) {
     .head{
-        padding: 80px 0;
-        &__wrapper{
-            display: flex;
-            justify-content: space-between;
-            
-        }
-
-        &__block-title{
-            margin-bottom: 64px;
-        }
-        &__title{
-            font-size: 52px;
-            margin-bottom: 16px;
-        }
-        &__title_position_left{
-            margin-right: 120px;
-        }
-        &__title_position_right{
-            margin-left: 120px;
-        }
-
-        &__link{
-            width: 280px;
-            padding: 21px 0;
-        }
-        
         &__image{
-            margin-top: -5px;
-            width: 640px;
-            height: 410px;
+            margin: 0 auto;
+            width: 680px;
+            height: 420px;
             
         }
-         
+        &__link{
+            width: 320px;
+            padding: 30px 0;
+        }  
     } 
 }
 
 
 @media (min-width: 1400px) {
     .head{
-        padding: 50px 0;
-        
-
-        &__block-title{
-            margin-bottom: 64px;
-        }
-        &__title{
-            font-size: 70px;
-            margin-bottom: 16px;
-        }
-        &__title_position_left{
-            margin-right: 140px;
-        }
-        &__title_position_right{
-            margin-left: 140px;
-        }
-
+       
         &__link{
             width: 280px;
             padding: 21px 0;
         }
-        
-        &__image{
-            margin-top: -5px;
-            width: 700px;
-            height: 480px;
-            
-        }
+       
          
     } 
 }
@@ -185,9 +110,9 @@
 
 
 
-@media (min-width: 1600px) {
-    .head{
-        padding: 100px 0;
+// @media (min-width: 1600px) {
+//     .head{
+//         padding: 100px 0;
          
-    } 
-}
+//     } 
+// }
