--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -11,4 +11,5 @@
 @import './content/header';
 @import './content/head';
 @import './content/form';
+@import './content/footer';
 @import './helpers/errors/er-404';
