--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -845,6 +845,40 @@ fieldset {
     padding: 100px 0;
   }
 }
+.footer {
+  padding: 16px 0;
+  text-align: center;
+}
+.footer__social-network-block {
+  margin-bottom: 17px;
+}
+.footer__title {
+  font-size: 20px;
+  margin-bottom: 16px;
+}
+.footer__icons {
+  font-size: 28px;
+  margin: 0 17px;
+}
+.footer__navigation-block {
+  margin-bottom: 23px;
+}
+.footer__logo {
+  width: 87px;
+  height: 20px;
+}
+.footer__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.footer__links {
+  font-size: 8px;
+}
+
 .error {
   text-align: center;
   padding-top: 160px;
