--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -866,6 +866,7 @@ fieldset {
 .footer__logo {
   width: 87px;
   height: 20px;
+  margin-bottom: 10px;
 }
 .footer__list {
   display: -webkit-box;
@@ -875,10 +876,48 @@ fieldset {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-.footer__links {
+.footer__links, .footer__copyright {
   font-size: 8px;
 }
 
+@media (min-width: 576px) {
+  .footer__title {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+  .footer__list {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .footer__logo {
+    width: 120px;
+    height: 30px;
+  }
+  .footer__links, .footer__copyright {
+    font-size: 12px;
+  }
+}
+@media (min-width: 768px) {
+  .footer__logo {
+    margin-bottom: 15px;
+  }
+  .footer__links, .footer__copyright {
+    font-size: 14px;
+  }
+}
+@media (min-width: 992px) {
+  .footer__title {
+    font-size: 25px;
+    margin-bottom: 20px;
+  }
+  .footer__logo {
+    width: 160px;
+    height: 40px;
+  }
+  .footer__links {
+    font-size: 16px;
+  }
+}
 .error {
   text-align: center;
   padding-top: 160px;
