--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -584,14 +584,14 @@ fieldset {
     height: 420px;
   }
   .head__link {
-    width: 320px;
-    padding: 30px 0;
+    width: 280px;
+    padding: 21px 0;
   }
 }
 @media (min-width: 1400px) {
   .head__link {
-    width: 280px;
-    padding: 21px 0;
+    width: 320px;
+    padding: 30px 0;
   }
 }
 .registration {
@@ -846,8 +846,9 @@ fieldset {
   }
 }
 .footer {
-  padding: 16px 0;
+  padding: 80px 0 16px 0;
   text-align: center;
+  font-family: "MS Reference Sans Serif";
 }
 .footer__social-network-block {
   margin-bottom: 17px;
@@ -911,11 +912,20 @@ fieldset {
     margin-bottom: 20px;
   }
   .footer__logo {
-    width: 160px;
+    width: 180px;
     height: 40px;
   }
   .footer__links {
     font-size: 16px;
+  }
+}
+@media (min-width: 1200px) {
+  .footer__logo {
+    width: 220px;
+    height: 45px;
+  }
+  .footer__links {
+    font-size: 20px;
   }
 }
 .error {
