--- a/assets/styles/scss/content/_footer.scss
+++ b/assets/styles/scss/content/_footer.scss
@@ -1,7 +1,7 @@
 .footer{
-    padding: 16px 0;
+    padding: 80px 0 16px 0;
     text-align: center;
-
+    font-family: $msref;
     &__social-network-block{
         margin-bottom: 17px;
     }
@@ -79,7 +79,7 @@
             margin-bottom: 20px;
         }
         &__logo{
-            width: 160px;
+            width: 180px;
             height: 40px;
         }
         &__links{
@@ -90,7 +90,15 @@
 }
 
 @media (min-width: 1200px){
-
+    .footer{
+        &__logo{
+            width: 220px;
+            height: 45px;
+        }
+        &__links{
+            font-size: 20px;
+        }
+    }
 }
 
 @media (min-width: 1400px){
