--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -854,11 +854,11 @@ fieldset {
   margin-bottom: 17px;
 }
 .footer__title {
-  font-size: 20px;
+  font-size: 22px;
   margin-bottom: 16px;
 }
 .footer__icons {
-  font-size: 28px;
+  font-size: 25px;
   margin: 0 17px;
 }
 .footer__navigation-block {
@@ -883,7 +883,6 @@ fieldset {
 
 @media (min-width: 576px) {
   .footer__title {
-    font-size: 20px;
     margin-bottom: 20px;
   }
   .footer__list {
@@ -901,6 +900,9 @@ fieldset {
 @media (min-width: 768px) {
   .footer__logo {
     margin-bottom: 15px;
+  }
+  .footer__icons {
+    font-size: 25px;
   }
   .footer__links, .footer__copyright {
     font-size: 14px;
@@ -928,6 +930,43 @@ fieldset {
     font-size: 20px;
   }
 }
+.instruction {
+  padding: 34px  0;
+  text-align: center;
+}
+.instruction__title {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.instruction__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.instruction__list li {
+  background-color: #fff;
+  width: 230px;
+  height: 38px;
+  margin: 0 auto;
+  margin-bottom: 12px;
+  padding: 2px 24px;
+}
+.instruction__list li:nth-child(1) {
+  padding: 10px 24px;
+}
+.instruction__links {
+  color: #000;
+  font-size: 10px;
+  font-weight: bold;
+}
+
 .error {
   text-align: center;
   padding-top: 160px;
