--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -12,4 +12,5 @@
 @import './content/head';
 @import './content/form';
 @import './content/footer';
+@import './content/instruction';
 @import './helpers/errors/er-404';
