--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -854,11 +854,11 @@ fieldset {
   margin-bottom: 17px;
 }
 .footer__title {
-  font-size: 22px;
+  font-size: 14px;
   margin-bottom: 16px;
 }
 .footer__icons {
-  font-size: 25px;
+  font-size: 18px;
   margin: 0 17px;
 }
 .footer__navigation-block {
@@ -883,7 +883,11 @@ fieldset {
 
 @media (min-width: 576px) {
   .footer__title {
+    font-size: 18px;
     margin-bottom: 20px;
+  }
+  .footer__icons {
+    font-size: 22px;
   }
   .footer__list {
     -ms-flex-pack: distribute;
@@ -910,7 +914,7 @@ fieldset {
 }
 @media (min-width: 992px) {
   .footer__title {
-    font-size: 25px;
+    font-size: 22px;
     margin-bottom: 20px;
   }
   .footer__logo {
@@ -922,6 +926,9 @@ fieldset {
   }
 }
 @media (min-width: 1200px) {
+  .footer__title {
+    font-size: 26px;
+  }
   .footer__logo {
     width: 220px;
     height: 45px;
@@ -956,10 +963,16 @@ fieldset {
   height: 38px;
   margin: 0 auto;
   margin-bottom: 12px;
-  padding: 2px 24px;
-}
-.instruction__list li:nth-child(1) {
-  padding: 10px 24px;
+  padding: 8px 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .instruction__links {
   color: #000;
@@ -967,6 +980,77 @@ fieldset {
   font-weight: bold;
 }
 
+@media (min-width: 576px) {
+  .instruction__title {
+    font-size: 30px;
+  }
+  .instruction__list li {
+    width: 320px;
+    height: 48px;
+  }
+  .instruction__links {
+    font-size: 12px;
+  }
+}
+@media (min-width: 768px) {
+  .instruction__title {
+    font-size: 36px;
+    margin-bottom: 34px;
+  }
+  .instruction__list li {
+    width: 360px;
+    height: 56px;
+    margin-bottom: 20px;
+  }
+  .instruction__links {
+    font-size: 14px;
+  }
+}
+@media (min-width: 992px) {
+  .instruction {
+    padding: 64px  0;
+  }
+  .instruction__title {
+    margin-bottom: 48px;
+  }
+  .instruction__list li {
+    width: 480px;
+    height: 64px;
+    margin-bottom: 30px;
+  }
+  .instruction__links {
+    font-size: 18px;
+  }
+}
+@media (min-width: 1200px) {
+  .instruction__list {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .instruction__title {
+    font-size: 26px;
+  }
+  .instruction__list li {
+    width: 320px;
+    height: 64px;
+    margin-bottom: 30px;
+  }
+  .instruction__links {
+    font-size: 14px;
+  }
+}
+@media (min-width: 1400px) {
+  .instruction__list li {
+    width: 380px;
+  }
+  .instruction__links {
+    font-size: 16px;
+  }
+}
 .error {
   text-align: center;
   padding-top: 160px;
