--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -13,4 +13,5 @@
 @import './content/form';
 @import './content/footer';
 @import './content/instruction';
+@import './content/schedule';
 @import './helpers/errors/er-404';
