--- a/assets/styles/css/animate.css
+++ b/assets/styles/css/animate.css
@@ -42,6 +42,12 @@
   -webkit-animation-iteration-count: calc(var(--animate-repeat) * 3);
   animation-iteration-count: calc(var(--animate-repeat) * 3);
 }
+.animate__animated.animate__delay-0_6s {
+  -webkit-animation-delay: .6s;
+  animation-delay: .6s;
+  -webkit-animation-delay: var(--animate-delay);
+  animation-delay: var(--animate-delay);
+}
 .animate__animated.animate__delay-1s {
   -webkit-animation-delay: 1s;
   animation-delay: 1s;
