--- a/assets/styles/scss/content/_schedule.scss
+++ b/assets/styles/scss/content/_schedule.scss
@@ -13,3 +13,19 @@
 
     
 }
+
+@media (min-width: 1200px) {
+    .schedule{
+        &__title{
+            font-size: 30px;
+        }
+        &__block{
+            margin-bottom: 20px;
+        }
+        &__list li{
+            font-size: 18px;
+        }
+
+    }
+    
+}
